name:                haxlbuild
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Simon Marlow
maintainer:          marlowsd@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag dev
  default: False

library
  exposed-modules:     Haxl.Build,
                       Haxl.Build.Types,
                       Haxl.Build.Haskell,
                       Haxl.DataSource.Cmd

  -- other-modules:       
  other-extensions:
  ghc-options: -Wall -Wno-name-shadowing -Wno-unused-do-bind
  if flag(dev)
    ghc-options: -Werror
  build-depends:       base >=4.9 && <5,
                       haxl >=2.0  && < 2.1,
                       text >=1.2 && <1.3,
                       time >=1.6 && <1.7,
                       hashable >=1.2 && <1.3,
                       async >=2.1 && <2.3,
                       process >=1.6 && <1.7,
                       transformers >=0.5 && <0.6,
                       unordered-containers >=0.2 && <0.3,
                       containers >=0.5 && <0.6,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       unix >=2.7 && <2.8
  -- hs-source-dirs:
  default-language:    Haskell2010

executable haxlmake
  default-language:
    Haskell2010
  hs-source-dirs:
    haxlmake
  build-depends:
    base,
    haxlbuild,
    optparse-applicative >= 0.13 && <0.15
  main-is:
    HaskellMake.hs

test-suite test
  build-depends:
    base,
    containers,
    directory,
    filepath,
    haxl,
    haxlbuild,
    HUnit >= 1.2 && < 1.7,
    temporary,
    test-framework,
    test-framework-hunit
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-do-bind
  hs-source-dirs:
    tests
  main-is:
    TestMain.hs
  type:
    exitcode-stdio-1.0
  default-language: Haskell2010
